packages/cfpb-forms/src/atoms/label.less
.a-label {
  display: inline-block;

  &_helper {
    color: @label-helper;
    font-size: unit((16px / @base-font-size-px), rem);
    font-weight: normal;

    .respond-to-max( @bp-xs-max, {
      font-size: unit((14px / @base-font-size-px), rem);
    });

    &__block {
      display: block;

      // Add a gap between the label helper and label.
      margin-top: unit((10px / @size-vi), em);
    }
  }

  &__heading {
    .h4();

    display: block;

    // Overwrites heading-4 margin.
    margin-bottom: unit((10px / @font-size), em);
  }
}

